test/invalid-semantics/fc66494_wildcard_operation/wildcard_operation.mag
-- Author: 66494, Tiago Silva

const _ : Int = 10
const x : Int = 5

fun main (_) : Unit -> Unit =
    print(x+_)